# CStyleCheck

./: .pre-commit-hooks.yaml  README.md  Rules-and-Configuration.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: cnamecheck_tests.yml  cstylecheck_rules.yml  cstylecheck_tests.yml  docker_publish.yml  naming_convention.yml  wiki_publish.yml
Dockerfile/: .dockerignore  Dockerfile
cstylecheck/: index.html  trend.jsonl
docs/aspice/: CNameCheck_ACQ4_Supplier_Monitoring_Plan.md  CNameCheck_MAN3_Project_Management_Plan.md  CNameCheck_MAN5_Risk_Management_Plan.md  CNameCheck_PA2_Capability_Records.md  CNameCheck_SUP10_Change_Request_Plan.md  CNameCheck_SUP1_Quality_Assurance_Plan.md  CNameCheck_SUP8_CM_Plan.md  CNameCheck_SUP9_Problem_Resolution_Plan.md  CNameCheck_SWE1_SW_Requirements.md  CNameCheck_SWE2_SW_Architecture.md  CNameCheck_SWE3_Detailed_Design.md  CNameCheck_SWE4_Unit_Verification.md  CNameCheck_SWE5_Integration_Test.md  CNameCheck_SWE6_Qualification_Test.md  CNameCheck_SYS2_System_Requirements.md  CNameCheck_SYS3_System_Architecture.md  CNameCheck_SYS4_Integration_Test_Spec.md  CNameCheck_SYS5_System_Verification.md
docs/templates/: ASPICE_CL2_Test_Case_Template_1.md
scripts/: build.bat  run.bat
src/: _version.py  aliases.txt  c_stdlib_names.txt  cnamecheck.options  cnamecheck.py  cstylecheck.options  cstylecheck.py  cstylecheck_exclusions.yml  cstylecheck_rules.yaml  exclusions.yml  naming_convention.yaml  project.defines
tests/: c_keywords.txt  c_spell_dict.txt  cstylecheck_rules.yaml  harness.py  naming_convention.yaml  test_barr_c.py  test_block_comment_spacing.py  test_cli.py  test_copyright_header.py  test_defines.py  test_dictionaries.py  test_enums.py  test_eof_comment.py  test_exclusions.py  test_functions.py  test_improvements.py  test_include_guards.py  test_misc.py  test_misc_improvements.py  test_parameter_prefix.py  test_reserved_name.py  test_sign_compatibility.py  test_spell_check.py  test_structs.py  test_typedefs.py  test_variables.py  test_yoda_condition.py
